# the-word

./: .env.template  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
config/: sources.yaml  venues.yaml
docs/: CNAME  app.js  events.json  index.html  style.css
src/the_word/: __init__.py  __main__.py  fetcher.py  health.py  images.py  processor.py  publisher.py  quality_gate.py  state.py  structurer.py  validation.py  writer.py
tests/: sample_events.json  test_processor.py  test_quality_gate.py  test_state.py  test_structurer.py  test_validation.py  test_writer.py
