[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-word"
version = "0.1.0"
description = "Minneapolis/St. Paul rolling 7-day events calendar — scraping pipeline"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
